# pakemon-rust

./: .gitignore  Cargo.toml  Makefile  README.md  pakemon.lua
crates/pakemon/: Cargo.toml
crates/pakemon/assets/: intro.scn.ron
crates/pakemon/src/: main.rs
crates/rattata/: Cargo.toml
crates/rattata/mock/: pets.json
crates/rattata/src/: lib.rs
crates/trainer/: Cargo.toml
src/pakemon/: main.rs
src/rattata_client/: lib.rs  main.rs
static/: .gitkeep
